// Database schema in DBML format (snake_case tables/columns)

Table parent_relationship {
  id text [pk]
  name text [unique]
  description text
}

Table class_role {
  id text [pk]
  name text [unique]
  description text
}

Table "user" {
  id uuid [pk]
  clerk_uid text [unique]
  is_active boolean
  created_at timestamptz
  updated_at timestamptz
}

Table role {
  id text [pk]
  name text [unique]
  description text
  permissions jsonb
  created_at timestamptz
  updated_at timestamptz
}

Table student {
  id uuid [pk]
  full_name text
  email citext
  phone_number text
  address text
  date_of_birth timestamp
  nickname text
  gender text
  enrollment_date timestamp
  is_on_track boolean
  class_id uuid
  is_archived boolean
  created_at timestamptz
  updated_at timestamptz
}

Table teacher {
  id uuid [pk]
  full_name text
  email citext [unique]
  phone_number text [unique]
  address text
  date_of_birth timestamp
  gender text
  start_date timestamp
  is_archived boolean
  user_id uuid [unique]
  created_at timestamptz
  updated_at timestamptz
}

Table parent {
  id uuid [pk]
  full_name text
  email citext [unique]
  phone_number text [unique]
  address text
  date_of_birth timestamp
  gender text
  occupation text
  work_address text
  is_archived boolean
  user_id uuid [unique]
  spouse_id uuid [unique]
  created_at timestamptz
  updated_at timestamptz
}

Table student_parent {
  student_id uuid
  parent_id uuid
  parent_relationship_id text
  created_at timestamptz
  updated_at timestamptz

  indexes {
    (student_id, parent_id) [pk]
    parent_id
  }
}

Table user_roles {
  user_id uuid
  role_id text

  indexes {
    (user_id, role_id) [pk]
  }
}

Table grade_level {
  id uuid [pk]
  name text [unique]
  order int [unique]
  created_at timestamptz
  updated_at timestamptz
}

Table subject {
  id uuid [pk]
  name text [unique]
  created_at timestamptz
  updated_at timestamptz
}

Table class {
  id uuid [pk]
  name text
  grade_level_id uuid
  created_at timestamptz
  updated_at timestamptz

  indexes {
    (grade_level_id, name) [unique]
  }
}

Table class_homeroom_teacher {
  class_id uuid
  teacher_id uuid
  class_role_id text
  created_at timestamptz
  updated_at timestamptz

  indexes {
    (class_id, teacher_id) [pk]
    teacher_id
  }
}

Table class_subject_teacher {
  class_id uuid
  teacher_id uuid
  subject_id uuid
  created_at timestamptz
  updated_at timestamptz

  indexes {
    (class_id, teacher_id, subject_id) [pk]
    teacher_id
    subject_id
  }
}

Ref: student.class_id > class.id
Ref: teacher.user_id > "user".id
Ref: parent.user_id > "user".id
Ref: parent.spouse_id > parent.id
Ref: student_parent.student_id > student.id
Ref: student_parent.parent_id > parent.id
Ref: student_parent.parent_relationship_id > parent_relationship.id
Ref: user_roles.user_id > "user".id
Ref: user_roles.role_id > role.id
Ref: class.grade_level_id > grade_level.id
Ref: class_homeroom_teacher.class_id > class.id
Ref: class_homeroom_teacher.teacher_id > teacher.id
Ref: class_homeroom_teacher.class_role_id > class_role.id
Ref: class_subject_teacher.class_id > class.id
Ref: class_subject_teacher.teacher_id > teacher.id
Ref: class_subject_teacher.subject_id > subject.id
